--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     <div id="page1" class="section active">
       <img src="image1.png" class="ring" alt="Ring">
       <h1 class="typewriter">Happy Propose Day</h1>
-      <h2 class="new-style fade-in delay-1">For the one who owns my Heart ❤️</h2>
+      <h2 class="new-style fade-in delay-1">For the one who own my Heart ❤️</h2>
       <button onclick="nextPage()" class="btn btn-yes fade-in delay-3">Top to open your heart</button>
     </div>
 
@@ -166,7 +166,7 @@
 
       <p class="new-style fade-in delay-5">“In a room full of art, you are the only masterpiece I see.
                                     Will you be mine forever?”</p>
-      <p class="fade-in delay-5">____ 8 February ____</p>
+      <p class="fade-in delay-5">_8 February_</p>
 
       <button class="btn btn-yes fade-in delay-3" id="yesBtn">Yes a Thousand Times... yes ❤️</button>
       <button class="btn btn-no fade-in delay-4" id="noBtn">No..</button>
@@ -235,4 +235,5 @@
   </script>
 
 </body>
+
 </html>
